# judilibre-eda

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md
judilibre_client/: __init__.py  api_client.py  configuration.py  rest.py
judilibre_client/api/: __init__.py  default_api.py
judilibre_eda/: collocations.py  corpus.py  data.py  main.py  tokenizers.py  utils.py
notebooks/: eda-cvalue.ipynb  eda-rake.ipynb  load-data.ipynb
tests/: test_default_api.py  test_healthcheck.py
