# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "judilibre-eda"
version = "0.1.0"
description = "Judilibre EDA"
authors = ["Clément Brutti-Mairesse <clement.brutti.mairesse@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ClementBM/basic-python-repository-template"
repository = "https://github.com/ClementBM/basic-python-repository-template"
keywords = ["mykeyword", "mykeyword", "mykeyword"]
include = [
    "LICENSE",
]
packages = [
    { include = "judilibre_client" },
    { include = "judilibre_eda" },
]


# https://pypi.org/classifiers/
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
requests = "^2.27.1"
certifi = "^2022.12.7"
python-dateutil = "^2.8.2"
six = "^1.16.0"
urllib3 = "^1.26.14"
python-dotenv = "^0.21.0"
dstb = { git = "https://ClementBM@github.com/ClementBM/datascience-toolbox", branch = "main" }
rake-nltk = "^1.0.6"

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
mypy = "*"
jupyter = "*"
notebook = "*"
ipykernel = "*"
black = "*"
coverage = "*"
nose = "*"
pluggy = "*"
py = "*"
randomize = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"